# fastapi-storages

./: .gitignore  404.html  LICENSE.txt  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.json  sitemap.xml
.github/workflows/: tests.yml
api_reference/storages/: index.html
docs/: index.md  usage.md
fastapi_storages/: exceptions.py  filesystem.py  s3.py  utils.py
fastapi_storages/integrations/: peewee.py  sqlalchemy.py
search/: search_index.json
tests/: test_filesystem_storage.py  test_s3_storage.py  test_utils.py
tests/test_integrations/test_peewee/: test_image.py
tests/test_integrations/test_sqlalchemy/: test_base_file.py  test_file.py  test_image.py
usage/: index.html
