[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "fastapi_storages"
module-root = ""

[project]
name = "fastapi-storages"
version = "0.3.0"
description = 'FastAPI Storages'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["sqlalchemy", "django", "orm", "fastapi"]
authors = [
  { name = "Amin Alaee", email = "mohammadamin.alaee@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Database",
  "Topic :: Database :: Database Engines/Servers",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Internet :: WWW/HTTP",
  "Typing :: Typed",
]
dependencies = [
  "boto3~=1.25",
]

[project.optional-dependencies]
full = [
  "Pillow>=10",
  "sqlalchemy>=1.4",
  "peewee>=3",
]

[project.urls]
Documentation = "https://github.com/smithyhq/fastapi-storages#readme"
Issues = "https://github.com/smithyhq/fastapi-storages/issues"
Source = "https://github.com/smithyhq/fastapi-storages"

[dependency-groups]
dev = [
  "build",
  "coverage",
  "moto[s3]>=5",
  "mypy",
  "peewee>=3",
  "Pillow>=10",
  "pytest",
  "ruff",
  "sqlalchemy>=1.4",
]

lint = ["mypy", "ruff"]

docs = [
  "mkdocs-material==9.6.14",
  "mkdocs==1.6.1",
  "mkdocstrings[python]==0.26.1",
]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
no_implicit_optional = true

[tool.ruff]
lint.select = ["E", "F", "I"]

[tool.coverage.run]
source_pkgs = [
  "fastapi_storages",
  "tests",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "except NotImplementedError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
